force-app/main/default/objects/ampi__ManageLogframes__c/ampi__ManageLogframes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customize the interface for the ManageLogframes page by selecting whether or not to display buttons and/or provide a view-only interface for specific users/profiles.</description>
    <label>Manage Logframes</label>
</CustomObject>