force-app/main/default/objects/ampi__ManageLogframes__c/fields/ampi__Hide_Add_New_Framework_Item_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Add_New_Framework_Item_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Add New Framework Item Button</label>
    <type>Checkbox</type>
</CustomField>