force-app/main/default/objects/ampi__ManageLogframes__c/fields/ampi__Hide_Submit_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Submit_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Submit Button</label>
    <type>Checkbox</type>
</CustomField>